# OCR-Translate

./: .gitignore  README.md  __main__.py  gemini_ocr_translate.py  main.py  requirements.txt
android/: requirements_android.txt
config/: config.py
core/: cache_handler.py  config_manager.py  crosslinked_translate.py.bak  epub_parser.py  epub_translate.py  gpt_refiner.py.bak  lang_utils.py  manager.py  pdf_overlay.py  pdf_writer.py  refined_translate_pipeline.py  rewrite_cache_manager.py  signal_handler.py  translate.py  translation_cache_crosslink.py
core/engines/: google_translate.py
cpp_modules/cache_writer/: CMakeLists.txt  cache_writer.cpp
engines/: engine.py  manager.py
go_modules/translate_caller/: translate_caller.go
rust_modules/fast_text_refiner/: Cargo.toml
rust_modules/fast_text_refiner/src/: lib.rs
scripts/: run_cli.sh  run_gui.sh
tests/: test_google_import.py
ui/: main_window.py
